<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notification.NotificationFragment">

    <!--title-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Recipe_space_6x"
        android:text="@string/Recipe_txt_notification"
        android:textAppearance="@style/TextAppearanceBold.h4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_all_notification"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_34dp"
        android:layout_marginTop="@dimen/Recipe_space_6x"
        android:background="@drawable/unselected"
        android:gravity="center"
        android:text="@string/Recipe_txt_all"
        android:textColor="@color/bookmark_text_color_selector"
        app:layout_constraintEnd_toStartOf="@+id/txt_unread_notification"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_notification" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_unread_notification"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_34dp"
        android:background="@drawable/unselected"
        android:gravity="center"
        android:text="@string/Recipe_txt_unread"
        android:textColor="@color/bookmark_text_color_selector"
        app:layout_constraintEnd_toStartOf="@+id/txt_read_notification"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/txt_all_notification"
        app:layout_constraintTop_toTopOf="@id/txt_all_notification" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_read_notification"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_34dp"
        android:background="@drawable/unselected"
        android:gravity="center"
        android:text="@string/Recipe_txt_read"
        android:textColor="@color/bookmark_text_color_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/txt_unread_notification"
        app:layout_constraintTop_toTopOf="@id/txt_unread_notification" />

    <!--rv_notification-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notification"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/Recipe_space_7x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_all_notification" />

</androidx.constraintlayout.widget.ConstraintLayout>