<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookMark.BookMarkFragment">

    <!--title-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_save_recipe"
        style="@style/TextAppearanceBold.h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Recipe_space_6x"
        android:layout_marginTop="@dimen/Recipe_space_5x"
        android:text="@string/Recipe_txt_saved_recipes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--video-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_bookmark_video"
        android:layout_width="@dimen/_160dp"
        android:layout_height="@dimen/_34dp"
        android:layout_marginTop="@dimen/Recipe_space_8x"
        android:background="@drawable/unselected"
        android:gravity="center"
        android:text="@string/Recipe_txt_video"
        android:textColor="@color/bookmark_text_color_selector"
        android:textSize="@dimen/Recipe_textSize_very_small"
        app:layout_constraintStart_toStartOf="@+id/txt_save_recipe"
        app:layout_constraintTop_toBottomOf="@id/txt_save_recipe" />

    <!--Recipe-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_bookmark_Recipe"
        android:layout_width="@dimen/_160dp"
        android:layout_height="@dimen/_34dp"
        android:layout_marginStart="@dimen/Recipe_space_6x"
        android:layout_marginEnd="@dimen/Recipe_space_6x"
        android:background="@drawable/unselected"
        android:gravity="center"
        android:text="@string/Recipe_txt__recipe"
        android:textColor="@color/bookmark_text_color_selector"
        android:textSize="@dimen/Recipe_textSize_very_small"
        app:layout_constraintBottom_toBottomOf="@+id/txt_bookmark_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_bookmark_video"
        app:layout_constraintTop_toTopOf="@+id/txt_bookmark_video"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_saved_recipe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/Recipe_space_3x"
        android:layout_marginBottom="@dimen/_56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_bookmark_video" />

    <!--empty_state-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txt_bookmark_video">

        <include layout="@layout/empty_bookmark" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>